--- a/prove/src/view_controller/ViewMatch.form
+++ b/prove/src/view_controller/ViewMatch.form
@@ -36,7 +36,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="cittaHomelbl" alignment="0" max="32767" attributes="0"/>
                           <Component id="nameHomelbl" alignment="0" max="32767" attributes="0"/>
-                          <Component id="logoHomelbl" max="32767" attributes="0"/>
+                          <Component id="logoHomelbl" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -61,9 +61,9 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="logoGuestlbl" max="32767" attributes="0"/>
                           <Component id="cittaGuestlbl" alignment="0" max="32767" attributes="0"/>
                           <Component id="nameGuestlbl" max="32767" attributes="0"/>
-                          <Component id="logoGuestlbl" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -94,10 +94,10 @@
               </Group>
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="logoHomelbl" alignment="1" max="32767" attributes="0"/>
                   <Component id="jLabel3" pref="218" max="32767" attributes="0"/>
                   <Component id="jLabel10" alignment="0" max="32767" attributes="0"/>
-                  <Component id="logoHomelbl" max="32767" attributes="0"/>
-                  <Component id="logoGuestlbl" max="32767" attributes="0"/>
+                  <Component id="logoGuestlbl" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
