--- a/prove/src/view_controller/ManagementTeams.form
+++ b/prove/src/view_controller/ManagementTeams.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[0, 0]"/>
@@ -118,8 +118,11 @@
               <Table columnCount="3" rowCount="0">
                 <Column editable="true" title="Nome" type="java.lang.String"/>
                 <Column editable="true" title="Citt&#xe0;" type="java.lang.String"/>
-                <Column editable="true" title="Logo" type="java.lang.Object"/>
+                <Column editable="true" title="Logo" type="java.lang.String"/>
               </Table>
+            </Property>
+            <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+              <TableHeader reorderingAllowed="false" resizingAllowed="false"/>
             </Property>
           </Properties>
         </Component>
