--- a/prove/src/view_controller/ViewCalendar.form
+++ b/prove/src/view_controller/ViewCalendar.form
@@ -46,12 +46,12 @@
                       <Component id="takeCalendarbtn" min="-2" pref="122" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Component id="saveCalendarbtn" min="-2" pref="129" max="-2" attributes="0"/>
-                      <EmptySpace pref="27" max="32767" attributes="0"/>
+                      <EmptySpace pref="39" max="32767" attributes="0"/>
                       <Component id="deletebtn" min="-2" pref="138" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Component id="printbtn" min="-2" pref="126" max="-2" attributes="0"/>
-                      <EmptySpace pref="27" max="32767" attributes="0"/>
-                      <Component id="createCalendar" pref="136" max="32767" attributes="0"/>
+                      <EmptySpace pref="40" max="32767" attributes="0"/>
+                      <Component id="createCalendar" pref="148" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -71,7 +71,7 @@
                   </Group>
                   <Component id="viewbtn" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="20" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="yearlbl" pref="31" max="32767" attributes="0"/>
                   <Component id="insertYearlbl" max="32767" attributes="0"/>
@@ -79,14 +79,17 @@
               <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="343" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="printbtn" alignment="1" max="32767" attributes="0"/>
-                  <Component id="deletebtn" alignment="1" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="takeCalendarbtn" alignment="3" min="-2" pref="111" max="-2" attributes="0"/>
-                      <Component id="saveCalendarbtn" alignment="3" min="-2" pref="113" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="takeCalendarbtn" alignment="3" min="-2" pref="111" max="-2" attributes="0"/>
+                          <Component id="saveCalendarbtn" alignment="3" min="-2" pref="113" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="createCalendar" max="32767" attributes="0"/>
+                  <Component id="deletebtn" max="32767" attributes="0"/>
+                  <Component id="createCalendar" alignment="0" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
