--- a/prove/src/view_controller/ViewRanking.form
+++ b/prove/src/view_controller/ViewRanking.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -25,16 +25,16 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="588" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="634" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="588" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="395" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -50,15 +50,19 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="viewRanking">
           <Properties>
+            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="6" rowCount="0">
-                <Column editable="true" title="Posto" type="java.lang.Integer"/>
-                <Column editable="true" title="Nome" type="java.lang.String"/>
-                <Column editable="true" title="Punti" type="java.lang.Integer"/>
-                <Column editable="true" title="Giocate" type="java.lang.Integer"/>
-                <Column editable="true" title="Vinte" type="java.lang.Integer"/>
-                <Column editable="true" title="Perse" type="java.lang.Integer"/>
+                <Column editable="false" title="Posto" type="java.lang.Integer"/>
+                <Column editable="false" title="Nome" type="java.lang.String"/>
+                <Column editable="false" title="Punti" type="java.lang.Integer"/>
+                <Column editable="false" title="Giocate" type="java.lang.Integer"/>
+                <Column editable="false" title="Vinte" type="java.lang.Integer"/>
+                <Column editable="false" title="Perse" type="java.lang.Integer"/>
               </Table>
+            </Property>
+            <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+              <TableHeader reorderingAllowed="false" resizingAllowed="false"/>
             </Property>
           </Properties>
         </Component>
